resolve npm drama that wasn't allowing me to compile

--- a/index.html
+++ b/index.html
@@ -9,5 +9,13 @@
     <script type="text/javascript" src="build/js/app.js"></script>
   </head>
   <body>
+    <div class="jumbotron">
+      <h3>Medic!</h3>
+    </div>
+    <div class="container">
+      <div id="symptoms">
+        
+      </div>
+    </div>
   </body>
 </html>
