add selection to conditions

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       <div class="row">
         <div class="col-md-5 panel pnl-default conditions-panel">
           <h2 class="conditions-header">Search By Conditions</h2>
-          <div id="conditions-results">
+          <div class="colum-panel" id="conditions-results">
           </div>
           <ul id="conditions-pager" class="pager prevnext">
             <button class="page-select" pagedir="-1">< Prev</button>
@@ -29,6 +29,8 @@
         </div>
         <div class="col-md-5 panel pnl-default conditions-panel">
           <h2 class="conditions-header">Location</h2>
+          <div id="location-list" class="colum-panel">
+          </div>
         </div>
       </div>
     </div>
