cache results of doctor search

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <div class="container">
       <div class="row">
         <div class="col-md-5 panel pnl-default conditions-panel">
-          <h2 class="conditions-header">Search By Conditions</h2>
+          <h2 class="conditions-header">Select Condition</h2>
           <div class="colum-panel" id="conditions-results">
           </div>
           <ul id="conditions-pager" class="pager prevnext">
